...
                android:text="YOUR LOCATION"
                android:textSize="8sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/address_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/circular_book"
            android:maxLines="1"
            android:text="Home - Phase 1, JP Nagar"
...
            android:layout_height="2dp"
            android:background="@drawable/dotted_line_green" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/image_bookmark"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
...
