...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/location_query"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/circular_bold"
                    android:hint="@string/search_location"
                    android:maxLines="1"
...
                android:fontFamily="@font/circular_bold"
                android:text="@string/address_not_found"
                android:textColor="@color/theme"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/location_suggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never" />
        </LinearLayout>
...
