<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.mountblue.zomato.RestaurantDetails">

    <item
        android:id="@+id/action_bookmark"
        android:title="@string/bookmark"
        app:showAsAction="always"
        android:orderInCategory="90"
        android:icon="@drawable/ic_bookmark_border_black_24dp"/>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="always" />
</menu>
