<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.BookmarkFragment">

    <LinearLayout
        android:id="@+id/bookmark_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="@dimen/bookmark_placeholder"
            android:layout_height="@dimen/bookmark_placeholder"
            android:layout_gravity="center"
            android:src="@drawable/img_bookmark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_book"
            android:text="@string/no_bookmark_text"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restaurantList_bookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>